--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <title>Map of Crypto</title>
 <script type="text/javascript" src="d3.v3.js"></script>
 <style>
