--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <title>Map of Crypto</title>
 <script type="text/javascript" src="d3.v3.js"></script>
+<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax:{inlineMath:[['$','$'],["\\(","\\)"]],processEscapes:true}});</script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <style>
 html {
   height: 100%;
@@ -63,12 +64,13 @@ h4 {
 <div>
     <div style="width: 100%; height: 100%">
         <div style="float: left; width: 29%; display: inline-block; height: 100%; min-height: 2000px;" id="side">
-            <h2 style="text-align: center; margin-bottom: 5px;" class="h">Map of Crypto</h2>
-            <h3 style="text-align: center; margin-top: 5px;" class="h">Wiki Reference</h3>
+            <h2 style="text-align: center; margin-bottom: 5px;" class="h">Map of Crypto<br></h2>
+            <h3 style="text-align: center; margin-top: 5px;" class="h">Wiki Reference<br></h3>
             <p style="text-align: center; padding-left: 10px; padding-right: 10px;" id="name"><p>
-            <p style="padding: 10px;" id="content"><p>
+            <p style="padding: 10px;"><span id="content"><p>
         </div>
         <div style="float:right; width: 70%; height: 100%;">
+            <p id="loading" style="text-align: center;margin-top: 200px;">Loading...</p>
             <svg width="100%" height="500px"></svg>
         </div>
     </div>
@@ -88,6 +90,8 @@ function wikiOpen(name) {
         "<b>Date last checked</b>: &nbsp&nbsp&nbsp" + info[name]["date_last_checked"] + "<br>" +
         "<br>" + info[name]["long_description"] + ""
     ;
+
+    MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
 }
 
 function shadeColor(color, p) {
@@ -105,6 +109,8 @@ d3.json(dr+"primitives", function(error, links) {
 });
 
 d3.json(dr+"links", function(error, links) {
+document.getElementById("loading").outerHTML = "";
+document.getElementById("content").innerHTML = "Click a primitive for more information.";
 
 var nodes = {};
 var colors = {};
