--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -64,8 +64,8 @@ h4 {
 <div>
     <div style="width: 100%; height: 100%">
         <div style="float: left; width: 29%; display: inline-block; height: 100%; min-height: 2000px;" id="side">
-            <h2 style="text-align: center; margin-bottom: 5px;" class="h">Map of Crypto<br></h2>
-            <h3 style="text-align: center; margin-top: 5px;" class="h">Wiki Reference<br></h3>
+            <h2 style="text-align: center; margin-bottom: 5px;" class="h">Map of Crypto</h2>
+            <h3 style="text-align: center; margin-top: 5px;" class="h">Wiki Reference</h3>
             <p style="text-align: center; padding-left: 10px; padding-right: 10px;" id="name"><p>
             <p style="padding: 10px;"><span id="content"><p>
         </div>
