--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -4,7 +4,8 @@
 <title>Map of Crypto</title>
 <script type="text/javascript" src="d3.v3.js"></script>
 <script type="text/x-mathjax-config">MathJax.Hub.Config({messageStyle: "none",tex2jax:{inlineMath:[['$','$'],["\\(","\\)"]],processEscapes:true,preview:"none"}});</script>
-<script type="text/javascript" src='MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML' async></script>
+<!-- <script type="text/javascript" src='MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML' async></script> (Local MathJax installation) -->
+<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML' async></script>
 <style>
 html {
   height: 100%;
