--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="d3.v3.js"></script>
 <script type="text/x-mathjax-config">MathJax.Hub.Config({messageStyle: "none",tex2jax:{inlineMath:[['$','$'],["\\(","\\)"]],processEscapes:true,preview:"none"}});</script>
 <!-- <script type="text/javascript" src='MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML' async></script> (Local MathJax installation) -->
-<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML' async></script>
+<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 <style>
 html {
   height: 100%;
