very minor performance adjustment
changed two characters

--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -278,7 +278,7 @@ function wikiOpen(name) {
 }
 
 var dot = window.setInterval( function() {
-    if (steps == 10) {
+    if (steps >= 12) {
         main();
         clearInterval(dot);//steps++;
     }
