--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -1,10 +1,10 @@
+
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
 <title>Map of Crypto</title>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 <script type="text/x-mathjax-config">MathJax.Hub.Config({messageStyle: "none",tex2jax:{inlineMath:[['$','$'],["\\(","\\)"]],processEscapes:true,preview:"none"}});</script>
-<!-- <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML' async></script> (Local MathJax installation) -->
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 <style>
 html {
@@ -51,6 +51,36 @@ text {
     font-style: normal;
 }
 
+.about {
+    text-align: right;
+    font-family: sans-serif;
+    font-family: 'SF Pro Display';
+    font-size: 12pt;
+    font-style: normal;
+    margin-top: 10px;
+    margin-right: 15px;
+    color: black;
+}
+
+.about a {
+    color: black;
+    text-decoration: none;
+}
+
+.about a:hover {
+    text-decoration: underline;
+}
+
+.about a:before {
+    color: black;
+    display:inline-block;
+    text-decoration: none;
+}
+
+.about a:hover:before{
+    text-decoration: none;
+}
+
 h4 {
     font-family: sans-serif;
 }
@@ -73,6 +103,7 @@ h4 {
             <p style="padding: 10px;"><span id="content"><p>
         </div>
         <div style="float:right; width: 70%; height: 100%;">
+            <p class="about"><a href="https://mapofcrypto.io/">About</a>&nbsp; &nbsp;<a href="https://github.com/sarahscheffler/mapofcrypto">Github</a></p>
             <div id="loading" style="text-align: center; margin-top: 200px; width: 95%;"><p style="text-align: left; margin-left: 45%;">Loading map<span id="dots"></span></p></div>
             <svg width="100%" height="500px"></svg>
         </div>
