--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 <script type="text/x-mathjax-config">MathJax.Hub.Config({messageStyle: "none",tex2jax:{inlineMath:[['$','$'],["\\(","\\)"]],processEscapes:true,preview:"none"}});</script>
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+<link href="font.css" rel="stylesheet">
 <style>
 html {
   height: 100%;
