--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>Map of Crypto</title>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
-<script type="text/x-mathjax-config">MathJax.Hub.Config({messageStyle: "none",tex2jax:{inlineMath:[['$','$'],["\\(","\\)"]],processEscapes:true,preview:"none"}});</script>
-<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/katex.min.css">
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/katex.min.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/contrib/auto-render.min.js"></script>
 <link href="font.css" rel="stylesheet">
 <style>
 html {
@@ -91,6 +91,9 @@ h4 {
     background-color: rgba(250, 250, 250, 1.0);
 }
 
+.katex {
+    font-size: 1em !important;
+}
 </style>
 </head>
 
@@ -306,7 +309,7 @@ function wikiOpen(name) {
         "<br>" + info[name]["long_description"] + ""
     ;
 
-    MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
+    renderMathInElement(document.getElementById("content"), {delimiters: [{left: "$", right: "$", display: false}]});
 }
 
 var dot = window.setInterval( function() {
