swap MathJax --> KaTeX

--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Map of Crypto</title>
+<script type="text/javascript" src="d3.v3.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/katex.min.css">
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/katex.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/contrib/auto-render.min.js"></script>
