--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -116,13 +116,28 @@ h4 {
             </div>
         </div>
         <div style="float:right; width: 65%; height: 100%;">
-            <p class="about"><a href="https://mapofcrypto.io/">About</a>&nbsp; &nbsp;<a href="https://github.com/sarahscheffler/mapofcrypto">Github</a></p>
+            <p class="about">
+                <a href="https://mapofcrypto.io/">About</a>&nbsp; &nbsp;<a href="https://github.com/sarahscheffler/mapofcrypto">Github</a>
+            </p>
             <div id="loading" style="text-align: center; margin-top: 200px; width: 95%;"><p style="text-align: left; margin-left: 45%;">Loading map<span id="dots"></span></p></div>
             <svg width="100%" height="500px"></svg>
         </div>
     </div>
 </div>
 <script>
+//---- LEGEND ----//
+var linksType = {};
+linksType['E_implies_E'] = "15, 3";
+linksType['is_type_of'] = "0";
+//----------------//
+
+var about = document.getElementsByClassName('about')[0];
+about.innerHTML = "<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>" + about.innerHTML;
+for (var type in linksType) {
+    about.innerHTML = "<span>" + type + "</span><svg height=\"25\" width=\"60\" margin=\"0\"><g fill=\"none\"><path stroke=\"#666\" d=\"M5 20 l51 0\" stroke-dasharray=\"" + linksType[type] + "\" /></g></svg><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>" + about.innerHTML;
+}
+// about.innerHTML = "<span>Legend: &nbsp; &nbsp;</span>" + about.innerHTML;
+
 function parseBibTexLine (text) {
     var m = text.match(/^\s*(\S+)\s*=\s*/);
     if (!m) {
@@ -206,6 +221,10 @@ fetch('https://api.github.com/repositories/133050934/contents/objects/Nodes', {m
             });
             info[nodesJSON[node["download_url"]]["display_name"]] = nodesJSON[node["download_url"]];
             info[nodesJSON[node["download_url"]]["display_name"]].color = (Math.floor(Math.random() * Math.floor(7)));
+            if (typeof nodesJSON[node["download_url"]] === "undefined") {
+                document.getElementById("loading").outerHTML = "Failed to read node file";
+                console.log("Error reading file (nodes)");
+            }
         });
     });
     fetch('https://api.github.com/repositories/133050934/contents/objects/Edges', {method:'GET',
@@ -218,10 +237,15 @@ fetch('https://api.github.com/repositories/133050934/contents/objects/Nodes', {m
             fetch(edge["download_url"]).then(response => {
               return response.json();
             }).then(data => {steps++;
+                if (typeof nodesData[data["source_nodes"][0]] === "undefined") {
+                        document.getElementById("loading").outerHTML = "Failed to read edge file";
+                        console.log("Error reading file (edges)");
+                }
                 links.push({
                     source: nodesData[data["source_nodes"][0]]["display_name"],
                     target: nodesData[data["dest_node"]]["display_name"],
-                    color: (Math.floor(Math.random() * Math.floor(7)))
+                    color: (Math.floor(Math.random() * Math.floor(7))),
+                    type: data["link_type"]
                 });
                 info[nodesData[data["source_nodes"][0]]["display_name"]+nodesData[data["dest_node"]]["display_name"]] = data;
             });
@@ -233,7 +257,7 @@ fetch('https://api.github.com/repositories/133050934/contents/objects/Nodes', {m
         getSize[link.source] = link.textsize;
     });
 });
-
+var force;
 function main() {
     document.getElementById("loading").outerHTML = "";
     document.getElementById("content").innerHTML = "Click a primitive for more information.";
@@ -254,39 +278,45 @@ function main() {
     var width = 600,
         height = 500;
 
-    var force = d3.layout.force()
-        .nodes(d3.values(nodes))
-        .links(links)
-        .size([width, height])
-        .linkDistance(160)
-        .charge(-800)
-        .on("tick", tick)
-        .start();
+    force = d3.layout.force();
+    force.nodes(d3.values(nodes));
+    force.links(links);
+    force.size([width, height]);
+    force.linkDistance(160);
+    force.linkStrength(1);
+    force.charge(-800);
+    force.on("tick", tick);
+    force.start();
 
-    var svg = d3.select("body").select("svg")
+    d3.selection.prototype.last = function() {
+      var last = this.size() - 1;
+      return d3.select(this[0][last]);
+    };
+    var svg = d3.select("body").selectAll("svg").last();
 
-    svg.append("svg:defs").selectAll("marker")
-        .data(["end"])
-      .enter().append("svg:marker")
-        .attr("id", String)
-        .attr("viewBox", "0 -5 10 10")
-        .attr("refX", 32)
-        .attr("refY", -2.0)
-        .attr("markerWidth", 6)
-        .attr("markerHeight", 6)
-        .attr("orient", "auto")
-      .append("svg:path")
-        .attr("d", "M0,-5L10,0L0,5");
+    var m = svg.append("svg:defs").selectAll("marker").data(["end"]);
+    // console.log("m:    ", m);
+    var n = m.enter().append("svg:marker");
+    // console.log("m:    ", n);
+        n.attr("id", String);
+        n.attr("viewBox", "0 -5 10 10");
+        n.attr("refX", 32);
+        n.attr("refY", -2.0);
+        n.attr("markerWidth", 6);
+        n.attr("markerHeight", 6);
+        n.attr("orient", "auto");
+    m.append("svg:path").attr("d", "M0,-5L10,0L0,5");
 
-    var path = svg.append("svg:g").selectAll("path")
-        .data(force.links())
-      .enter().append("svg:path")
-        .attr("class", "link")
-        .attr("stroke-width", "2.0px")
-        .attr("stroke-opacity", "0.6")
-        .attr("marker-end", "url(#end)");
-    var pathcover = svg.append("svg:g").selectAll("path")
-        .data(force.links())
+    var path = svg.append("svg:g").selectAll("path").data(force.links());
+    var pathref = path.enter().append("svg:path");
+    pathref.attr("class", "link");
+    pathref.attr("stroke-width", "2.0px");
+    pathref.attr("stroke-opacity", "0.6");
+    pathref.attr("marker-end", "url(#end)");
+    pathref.style("stroke-dasharray", function (d){ return linksType[d.type]; });
+    console.log("path:    ", path);
+    console.log("pathref:    ", pathref);
+    var pathcover = svg.append("svg:g").selectAll("path").data(force.links())
       .enter().append("svg:path")
         .attr("class", "link")
         .attr("stroke-width", "12.0px")
@@ -302,7 +332,7 @@ function main() {
         .attr({
             r: 28,
             fill: function (d) {
-                var a = info[nodes[d.name].name].color;
+                var a = info[d.name].color;
                 console.log("a=",a);
                 if (typeof a === "undefined"){
                     return color(0);
@@ -311,7 +341,7 @@ function main() {
                 }
             },
             stroke: function (d) {
-                var a = info[nodes[d.name].name].color;
+                var a = info[d.name].color;
                 console.log("a=",a);
                 console.log("color ", color(a));
                 console.log("color_", darken(color(0), a));
@@ -453,7 +483,7 @@ function wikiOpen(name, link = false, id) {
 }
 
 var dot = window.setInterval( function() {
-    if (steps >= 12) {
+    if (steps >= 16) {
         main();
         clearInterval(dot);//steps++;
     }
