BibTex-JS formatting added
Now all citations are formatted with BibTex-JS.

--- a/web/graph/index.html
+++ b/web/graph/index.html
@@ -59,7 +59,7 @@ text {
     font-family: 'SF Pro Display';
     font-size: 12pt;
     font-style: normal;
-    margin-top: 10px;
+    margin-top: 0;
     margin-right: 15px;
     margin-bottom: 0;
     color: black;
